# AILS

./: .gitignore  README.md  pyproject.toml
Project_1/: GRU 0.699.ipynb  data_train.csv  smiles_test.csv
Project_1/Final/: predictions_rf.csv  rf 1000.ipynb
Project_2/: testing.ipynb  testing_2.ipynb  testing_3.ipynb  testing_4.ipynb
Project_3/: testing_2_train.ipynb  testing_2_val.ipynb
Project_3/Final/: predictions_resnet_11.csv  testing_3.ipynb
UE/ails/: README.md
UE/ails/01 Notebook - Handling molecule data/: 01_handling_molecule_data.ipynb  environment.yml
UE/ails/02 Notebook - QSAR and Model Evaluation/: 02_qsar_model_evaluation.ipynb  environment.yml
UE/ails/A1/: A1_solution.ipynb  A1_solution_0.657.ipynb  AI_solution_LSTM.ipynb  GRU 0.699.ipynb  evaluation_script.py  predictions_rf_search.csv  predictions_rf_search_2.csv  probs.csv  rf 1000.ipynb  test_predictions.csv  test_predictions_2.csv  test_predictions_3.csv  test_predictions_4.csv  test_predictions_5.csv  test_predictions_6.csv
UE/ails/A2/: predictions_1.txt  predictions_2.txt  predictions_gru_3.txt  predictions_gru_4.txt  predictions_lstm_2.txt  predictions_lstm_4.txt  predictions_lstm_5.txt  predictions_lstm_epoch37.txt  predictions_new_2.txt  predictions_transformer.txt  testing.ipynb  testing_2.ipynb  testing_3.ipynb  testing_5.ipynb  testing_6.ipynb  testing_7.ipynb  trained_model_1.pth  trained_model_2.pth  trained_model_3.pth  trained_model_lstm_epoch37.pth
UE/ails/A3/: predictions_1.csv  predictions_3.csv  sample_submission.csv  testing_1.ipynb  train_data.csv  val_data.csv
(+1 files in other folders)
